# pico-mnist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
pj_mnist/: CMakeLists.txt  LcdIli9341SPI.cpp  LcdIli9341SPI.h  Main.cpp  TpTsc2046SPI.cpp  TpTsc2046SPI.h  conv_mnist_quant.cpp  conv_mnist_quant.h  font.cpp  font.h  wiring.txt
pj_mnist/conv_mnist/: conv_mnist.cpp  conv_mnist.h5  conv_mnist.tflite  conv_mnist_quant.cpp  conv_mnist_quant.tflite  tflmicro_mnist.ipynb
